# stl_viewer

./: CMakeLists.txt  LICENSE  Makefile
src/: glad.c  main.cpp  renderer.cpp  renderer.h  util.cpp  util.h
src/shaders/: shader.frag  shader.vert
